--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-scikit-learn==0.24.2
-xgboost>=1.5.0
+scikit-learn
+xgboost==1.5.0
 pandas>=1.4.2
 dash 
 gunicorn 
@@ -7,5 +7,5 @@ plotly
 matplotlib
 xlrd
 openpyxl
-dash_bootstrap_components<=0.12.0
+dash_bootstrap_components
  
