--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-scikit-learn
+scikit-learn==1.0.2
 xgboost==1.5.0
 pandas>=1.4.2
-dash 
+dash==2.3.1
 gunicorn 
 plotly
 matplotlib
 xlrd
 openpyxl
-dash_bootstrap_components
- 
+dash_bootstrap_components==1.1.0
+  
